--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="header">
 <div class="scan-line"></div>
 <div class="logo">⚡ WINGO PRO</div>
-<div class="title">SIGNAL ANALYZER v4.0</div>
+<div class="title">SIGNAL ANALYZER v5.0 ULTRA</div>
 </div>
 <div class="prediction-container">
 <div class="prediction-header"><h3>🔮 NEXT PREDICTION</h3></div>
@@ -44,7 +44,281 @@
 </div>
 <button class="refresh-btn" onclick="_r()"><span class="refresh-icon" id="ri">⟳</span><span>Refresh</span></button>
 <script>
-const c=document.getElementById('matrix'),ctx=c.getContext('2d');c.width=window.innerWidth;c.height=window.innerHeight;const chars='01',fontSize=14,cols=c.width/fontSize,drops=[];for(let i=0;i<cols;i++)drops[i]=1;function drawMatrix(){ctx.fillStyle='rgba(10,14,39,0.05)';ctx.fillRect(0,0,c.width,c.height);ctx.fillStyle='#00ff41';ctx.font=fontSize+'px monospace';for(let i=0;i<drops.length;i++){const t=chars[Math.floor(Math.random()*chars.length)];ctx.fillText(t,i*fontSize,drops[i]*fontSize);if(drops[i]*fontSize>c.height&&Math.random()>0.975)drops[i]=0;drops[i]++}}setInterval(drawMatrix,50);(function(){const _0x4a=['Big','Small','win','loss'];let _p=null,_c=null,_h=[],_lp=null,_ct;const _d=h=>{let s='';for(let i=0;i<h.length;i+=2)s+=String.fromCharCode(parseInt(h.substr(i,2),16));return s};const _k={u1:_d('68747470733a2f2f647261772e61722d6c6f74746572793031'),u2:_d('2e636f6d2f57696e476f2f57696e476f5f314d2f'),u3:_d('476574486973746f7279497373756550616765'),u4:_d('2e6a736f6e'),i:1000,m:59};const _x=n=>parseInt(n)>=5?_0x4a[0]:_0x4a[1];const _g=(n,c)=>{let a=[];if(c==='red')a.push('red');else if(c==='green')a.push('green');else if(c==='violet')a.push('violet');if(n===0){a.push('violet');a.push('red')}else if(n===5){a.push('violet');a.push('green')}return a};const _a=d=>{if(d.length<3)return{p:_0x4a[0],c:55};let cs=0,cb=0,lcs=0,lcb=0;for(let i=0;i<d.length;i++){if(d[i]===_0x4a[1]){cs++;if(cb>0)lcb=cb;cb=0}else{cb++;if(cs>0)lcs=cs;cs=0}}const lastWasBig=d[0]===_0x4a[0];let isAlternating=true;let alternateCount=0;if(d.length>=3){for(let i=1;i<Math.min(6,d.length);i++){if(d[i]===d[i-1]){isAlternating=false;break}alternateCount++}}let wavePattern=false;if(d.length>=6){const p1=d[0],p2=d[1],p3=d[2],p4=d[3],p5=d[4];if((p1!==p2)&&(p2===p3)&&(p3!==p4)&&(p4===p5)){wavePattern=true}}let bigCount=0,smallCount=0;const checkLen=Math.min(10,d.length);for(let i=0;i<checkLen;i++){if(d[i]===_0x4a[0])bigCount++;else smallCount++}const imbalance=Math.abs(bigCount-smallCount);const isHeavyBig=bigCount>smallCount+2;const isHeavySmall=smallCount>bigCount+2;let momentum=0;if(d.length>=5){for(let i=0;i<5;i++){if(d[i]===_0x4a[1])momentum++;else momentum--}}let pred='';let conf=50;if(isAlternating&&alternateCount>=4){pred=lastWasBig?_0x4a[1]:_0x4a[0];conf=88+Math.min(alternateCount*2,10);return{p:pred,c:Math.min(conf,97)}}if(cs>=7){pred=_0x4a[0];conf=92+Math.min((cs-7)*2,6);return{p:pred,c:Math.min(conf,98)}}else if(cb>=7){pred=_0x4a[1];conf=92+Math.min((cb-7)*2,6);return{p:pred,c:Math.min(conf,98)}}if(cs>=5&&cs<=6){pred=_0x4a[0];conf=82+(cs*3);return{p:pred,c:Math.min(conf,94)}}else if(cb>=5&&cb<=6){pred=_0x4a[1];conf=82+(cb*3);return{p:pred,c:Math.min(conf,94)}}if(cs===4&&isHeavySmall){pred=_0x4a[0];conf=78+imbalance*2;return{p:pred,c:Math.min(conf,89)}}else if(cb===4&&isHeavyBig){pred=_0x4a[1];conf=78+imbalance*2;return{p:pred,c:Math.min(conf,89)}}if(isAlternating&&alternateCount===3){pred=lastWasBig?_0x4a[1]:_0x4a[0];conf=76+Math.random()*6;return{p:pred,c:Math.round(conf)}}if(wavePattern){pred=d[0]===d[1]?(d[0]===_0x4a[0]?_0x4a[1]:_0x4a[0]):d[0];conf=72+Math.random()*8;return{p:pred,c:Math.round(conf)}}if(cs===3){pred=_0x4a[0];conf=lcb>=3?74+Math.random()*8:68+Math.random()*10}else if(cb===3){pred=_0x4a[1];conf=lcs>=3?74+Math.random()*8:68+Math.random()*10}else if(cs===2){pred=_0x4a[0];conf=momentum>=2?70+Math.random()*8:62+Math.random()*10}else if(cb===2){pred=_0x4a[1];conf=momentum<=-2?70+Math.random()*8:62+Math.random()*10}else if(cs===1){if(lcb>=4){pred=_0x4a[1];conf=64+Math.random()*8}else if(lcb===3){pred=_0x4a[0];conf=58+Math.random()*8}else{pred=isHeavySmall?_0x4a[0]:_0x4a[1];conf=54+Math.random()*8}}else if(cb===1){if(lcs>=4){pred=_0x4a[0];conf=64+Math.random()*8}else if(lcs===3){pred=_0x4a[1];conf=58+Math.random()*8}else{pred=isHeavyBig?_0x4a[1]:_0x4a[0];conf=54+Math.random()*8}}else{if(isHeavySmall){pred=_0x4a[0];conf=58+imbalance*3}else if(isHeavyBig){pred=_0x4a[1];conf=58+imbalance*3}else{pred=lastWasBig?_0x4a[1]:_0x4a[0];conf=52+Math.random()*10}}if(d.length>=8){const last8=d.slice(0,8);const b8=last8.filter(x=>x===_0x4a[0]).length;const s8=last8.filter(x=>x===_0x4a[1]).length;if(pred===_0x4a[0]&&s8>b8+2)conf+=8;if(pred===_0x4a[1]&&b8>s8+2)conf+=8}conf=Math.min(98,Math.max(48,Math.round(conf)));return{p:pred,c:conf}};const _calcStreak=arr=>{let mw=0,ml=0,cw=0,cl=0;arr.forEach(e=>{if(e.res===_0x4a[2]){cw++;if(cl>ml)ml=cl;cl=0}else if(e.res===_0x4a[3]){cl++;if(cw>mw)mw=cw;cw=0}});if(cw>mw)mw=cw;if(cl>ml)ml=cl;return{mw,ml}};const _u=()=>{const n=new Date(),h=String(n.getHours()).padStart(2,'0'),m=String(n.getMinutes()).padStart(2,'0'),s=String(n.getSeconds()).padStart(2,'0'),e=document.getElementById('rt');if(e)e.innerHTML=`${h}:${m}:<span class="seconds-highlight">${s}</span>`;if(n.getSeconds()===_k.m)_l()};const _s=()=>{_u();clearInterval(_ct);_ct=setInterval(_u,_k.i)};window._r=()=>{const ic=document.getElementById('ri');if(ic){ic.classList.add('spinning');setTimeout(()=>ic.classList.remove('spinning'),500)}_l()};const _l=async()=>{try{const t=new Date().getTime(),_u=_k.u1+_k.u2+_k.u3+_k.u4,_q=`?${_d('7473')}=${t}`,_f=_u+_q,r=await fetch(_f),d=await r.json();let ls=[];const _pk=['data','list'],_sk=['list'];if(d&&d[_pk[0]]&&d[_pk[0]][_pk[1]])ls=d[_pk[0]][_pk[1]].slice(0,10);else if(d&&d[_sk[0]])ls=d[_sk[0]].slice(0,10);else if(Array.isArray(d))ls=d.slice(0,10);const tb=document.getElementById("tb");tb.innerHTML="";if(ls.length===0){tb.innerHTML='<tr><td colspan="5" class="loading">[ NO DATA ]</td></tr>';return}const _f1=['issue','period','issueNo','periodId','issueNumber'],_f2=['result','number','num','openResult'],_f3=['color','colour'],_f4=['gameNo','drawNo','id'];const tp=String(ls[0][_f1[0]]||ls[0][_f1[1]]||ls[0][_f1[2]]||ls[0][_f1[3]]||ls[0][_f1[4]]||''),tn=String(ls[0][_f2[0]]||ls[0][_f2[1]]||ls[0][_f2[2]]||ls[0][_f2[3]]||''),ts=_x(tn);const sh=ls.map(i=>{const rn=i[_f2[0]]||i[_f2[1]]||i[_f2[2]]||i[_f2[3]]||"?";return _x(rn)});const pd=_a(sh);_c=pd;if(_lp!==tp){if(_p){const im=_p.p===ts,re={per:tp,pred:_p.p,act:ts,res:im?_0x4a[2]:_0x4a[3],num:tn};_h.unshift(re);if(_h.length>50)_h=_h.slice(0,50)}_p={..._c};_lp=tp}const cr=document.getElementById("currPred"),cb=document.getElementById("confBar"),cl=document.getElementById("confLabel");cr.innerHTML=`<span class="prediction-${_c.p.toLowerCase()}">${_c.p}</span>`;cb.style.width=_c.c+'%';if(_c.c>=70)cl.innerHTML='<span class="confidence-high">HIGH CONFIDENCE</span>';else cl.innerHTML='<span class="confidence-low">LOW CONFIDENCE</span>';let wc=0,lc=0;_h.forEach(e=>{if(e.res===_0x4a[2])wc++;if(e.res===_0x4a[3])lc++});const st=_calcStreak(_h);ls.forEach((it,ix)=>{const tr=document.createElement("tr"),tdp=document.createElement("td");tdp.className="period-cell";const pv=String(it[_f1[0]]||it[_f1[1]]||it[_f1[2]]||it[_f1[3]]||it[_f1[4]]||it[_f4[0]]||it[_f4[1]]||it[_f4[2]]||'');tdp.textContent=pv||"N/A";const rn=it[_f2[0]]||it[_f2[1]]||it[_f2[2]]||it[_f2[3]]||"?",tdn=document.createElement("td");tdn.className="number-cell";const ns=document.createElement("span"),co=(it[_f3[0]]||it[_f3[1]]||"").toLowerCase();if(co==='red'){ns.style.color='#ff0055';ns.style.textShadow='0 0 10px #ff0055'}else if(co==='green'){ns.style.color='#00ff41';ns.style.textShadow='0 0 10px #00ff41'}else if(co==='violet'||co==='purple'){ns.style.color='#aa00ff';ns.style.textShadow='0 0 10px #aa00ff'}ns.textContent=rn;tdn.appendChild(ns);const tds=document.createElement("td");tds.textContent=sh[ix];const tdc=document.createElement("td");tdc.className="color-cell";const nv=parseInt(rn),cls=_g(nv,co);cls.forEach(c=>{const dt=document.createElement("span");dt.className=`color-dot ${c}`;tdc.appendChild(dt)});const tdr=document.createElement("td"),mr=_h.find(q=>String(q.per)===String(pv));if(mr){if(mr.res===_0x4a[2]){tdr.className="result-cell result-win";tdr.textContent="✓ WIN"}else{tdr.className="result-cell result-loss";tdr.textContent="✗ LOSS"}}else tdr.textContent="-";tr.appendChild(tdp);tr.appendChild(tdn);tr.appendChild(tds);tr.appendChild(tdc);tr.appendChild(tdr);tb.appendChild(tr)});const to=wc+lc,wrt=to>0?Math.round((wc/to)*100):0;document.getElementById('wc').textContent=wc;document.getElementById('lc').textContent=lc;document.getElementById('tc').textContent=to;document.getElementById('wr').textContent=wrt+'%';document.getElementById('mw').textContent=st.mw;document.getElementById('ml').textContent=st.ml}catch(e){const _em=_d('5b204552524f52205d');document.getElementById("tb").innerHTML=`<tr><td colspan="5" class="loading">${_em}</td></tr>`}};_l();_s()})();
-</script>
-</body>
-</html>
+const c=document.getElementById('matrix'),ctx=c.getContext('2d');c.width=window.innerWidth;c.height=window.innerHeight;const chars='01',fontSize=14,cols=c.width/fontSize,drops=[];for(let i=0;i<cols;i++)drops[i]=1;function drawMatrix(){ctx.fillStyle='rgba(10,14,39,0.05)';ctx.fillRect(0,0,c.width,c.height);ctx.fillStyle='#00ff41';ctx.font=fontSize+'px monospace';for(let i=0;i<drops.length;i++){const t=chars[Math.floor(Math.random()*chars.length)];ctx.fillText(t,i*fontSize,drops[i]*fontSize);if(drops[i]*fontSize>c.height&&Math.random()>0.975)drops[i]=0;drops[i]++}}setInterval(drawMatrix,50);(function(){const _0x4a=['Big','Small','win','loss'];let _p=null,_c=null,_h=[],_lp=null,_ct;const _d=h=>{let s='';for(let i=0;i<h.length;i+=2)s+=String.fromCharCode(parseInt(h.substr(i,2),16));return s};const _k={u1:_d('68747470733a2f2f647261772e61722d6c6f74746572793031'),u2:_d('2e636f6d2f57696e476f2f57696e476f5f314d2f'),u3:_d('476574486973746f7279497373756550616765'),u4:_d('2e6a736f6e'),i:1000,m:59};const _x=n=>parseInt(n)>=5?_0x4a[0]:_0x4a[1];const _g=(n,c)=>{let a=[];if(c==='red')a.push('red');else if(c==='green')a.push('green');else if(c==='violet')a.push('violet');if(n===0){a.push('violet');a.push('red')}else if(n===5){a.push('violet');a.push('green')}return a};
+
+const _a=d=>{
+if(d.length<3)return{p:_0x4a[0],c:55};
+let cs=0,cb=0,lcs=0,lcb=0,llcs=0,llcb=0;
+for(let i=0;i<d.length;i++){
+if(d[i]===_0x4a[1]){
+cs++;
+if(cb>0){
+if(lcb>0)llcb=lcb;
+lcb=cb;
+}
+cb=0;
+}else{
+cb++;
+if(cs>0){
+if(lcs>0)llcs=lcs;
+lcs=cs;
+}
+cs=0;
+}
+}
+
+const lastWasBig=d[0]===_0x4a[0];
+let isAlternating=true;
+let alternateCount=0;
+if(d.length>=3){
+for(let i=1;i<Math.min(7,d.length);i++){
+if(d[i]===d[i-1]){
+isAlternating=false;
+break;
+}
+alternateCount++;
+}
+}
+
+let wavePattern=false;
+if(d.length>=6){
+const p1=d[0],p2=d[1],p3=d[2],p4=d[3],p5=d[4],p6=d[5];
+if((p1!==p2)&&(p2===p3)&&(p3!==p4)&&(p4===p5)&&(p5!==p6)){
+wavePattern=true;
+}
+}
+
+let bigCount=0,smallCount=0;
+const checkLen=Math.min(12,d.length);
+for(let i=0;i<checkLen;i++){
+if(d[i]===_0x4a[0])bigCount++;
+else smallCount++;
+}
+const imbalance=Math.abs(bigCount-smallCount);
+const isHeavyBig=bigCount>smallCount+3;
+const isHeavySmall=smallCount>bigCount+3;
+
+let momentum=0;
+if(d.length>=6){
+for(let i=0;i<6;i++){
+if(d[i]===_0x4a[1])momentum++;
+else momentum--;
+}
+}
+
+let pred='';
+let conf=50;
+
+if(cs>=8){
+pred=_0x4a[0];
+conf=95+Math.min((cs-8),3);
+return{p:pred,c:Math.min(conf,98)};
+}else if(cb>=8){
+pred=_0x4a[1];
+conf=95+Math.min((cb-8),3);
+return{p:pred,c:Math.min(conf,98)};
+}
+
+if(isAlternating&&alternateCount>=5){
+pred=lastWasBig?_0x4a[1]:_0x4a[0];
+conf=90+Math.min(alternateCount,7);
+return{p:pred,c:Math.min(conf,97)};
+}
+
+if(cs===7){
+pred=_0x4a[0];
+conf=93;
+return{p:pred,c:conf};
+}else if(cb===7){
+pred=_0x4a[1];
+conf=93;
+return{p:pred,c:conf};
+}
+
+if(cs===6){
+if(lcs>=3||lcb>=4){
+pred=_0x4a[0];
+conf=90;
+}else{
+pred=_0x4a[0];
+conf=87;
+}
+return{p:pred,c:conf};
+}else if(cb===6){
+if(lcb>=3||lcs>=4){
+pred=_0x4a[1];
+conf=90;
+}else{
+pred=_0x4a[1];
+conf=87;
+}
+return{p:pred,c:conf};
+}
+
+if(cs===5){
+if(lcb>=4){
+pred=_0x4a[0];
+conf=88;
+}else if(lcb===3){
+pred=_0x4a[0];
+conf=84;
+}else{
+pred=_0x4a[0];
+conf=82;
+}
+return{p:pred,c:conf};
+}else if(cb===5){
+if(lcs>=4){
+pred=_0x4a[1];
+conf=88;
+}else if(lcs===3){
+pred=_0x4a[1];
+conf=84;
+}else{
+pred=_0x4a[1];
+conf=82;
+}
+return{p:pred,c:conf};
+}
+
+if(isAlternating&&alternateCount===4){
+pred=lastWasBig?_0x4a[1]:_0x4a[0];
+conf=85+Math.random()*5;
+return{p:pred,c:Math.round(conf)};
+}
+
+if(cs===4){
+if(isHeavySmall||lcb>=3){
+pred=_0x4a[0];
+conf=80+imbalance;
+}else{
+pred=_0x4a[0];
+conf=76;
+}
+return{p:pred,c:Math.min(conf,88)};
+}else if(cb===4){
+if(isHeavyBig||lcs>=3){
+pred=_0x4a[1];
+conf=80+imbalance;
+}else{
+pred=_0x4a[1];
+conf=76;
+}
+return{p:pred,c:Math.min(conf,88)};
+}
+
+if(isAlternating&&alternateCount===3){
+pred=lastWasBig?_0x4a[1]:_0x4a[0];
+conf=78+Math.random()*5;
+return{p:pred,c:Math.round(conf)};
+}
+
+if(wavePattern){
+pred=d[0]===d[1]?(d[0]===_0x4a[0]?_0x4a[1]:_0x4a[0]):d[0];
+conf=75+Math.random()*6;
+return{p:pred,c:Math.round(conf)};
+}
+
+if(cs===3){
+if(lcb>=4){
+pred=_0x4a[0];
+conf=77;
+}else if(lcb===3){
+pred=_0x4a[0];
+conf=73;
+}else{
+pred=_0x4a[0];
+conf=70;
+}
+}else if(cb===3){
+if(lcs>=4){
+pred=_0x4a[1];
+conf=77;
+}else if(lcs===3){
+pred=_0x4a[1];
+conf=73;
+}else{
+pred=_0x4a[1];
+conf=70;
+}
+}
+else if(cs===2){
+if(momentum>=3){
+pred=_0x4a[0];
+conf=72;
+}else if(lcb>=3){
+pred=_0x4a[0];
+conf=68;
+}else{
+pred=_0x4a[0];
+conf=64;
+}
+}else if(cb===2){
+if(momentum<=-3){
+pred=_0x4a[1];
+conf=72;
+}else if(lcs>=3){
+pred=_0x4a[1];
+conf=68;
+}else{
+pred=_0x4a[1];
+conf=64;
+}
+}
+else if(cs===1){
+if(lcb>=5){
+pred=_0x4a[1];
+conf=68;
+}else if(lcb===4){
+pred=_0x4a[0];
+conf=65;
+}else if(lcb===3){
+pred=_0x4a[0];
+conf=60;
+}else{
+pred=isHeavySmall?_0x4a[0]:_0x4a[1];
+conf=56;
+}
+}else if(cb===1){
+if(lcs>=5){
+pred=_0x4a[0];
+conf=68;
+}else if(lcs===4){
+pred=_0x4a[1];
+conf=65;
+}else if(lcs===3){
+pred=_0x4a[1];
+conf=60;
+}else{
+pred=isHeavyBig?_0x4a[1]:_0x4a[0];
+conf=56;
+}
+}
+else{
+if(isHeavySmall&&imbalance>=4){
+pred=_0x4a[0];
+conf=62+imbalance*2;
+}else if(isHeavyBig&&imbalance>=4){
+pred=_0x4a[1];
+conf=62+imbalance*2;
+}else{
+pred=lastWasBig?_0x4a[1]:_0x4a[0];
+conf=54+Math.random()*8;
+}
+}
+
+if(d.length>=10){
+const last10=d.slice(0,10);
+const b10=last10.filter(x=>x===_0x4a[0]).length;
+const s10=last10.filter(x=>x===_0x4a[1]).length;
+if(pred===_0x4a[0]&&s10>b10+3)conf+=10;
+if(pred===_0x4a[1]&&b10>s10+3)conf+=10;
+if(pred===_0x4a[0]&&s10>b10+2)conf+=6;
+if(pred===_0x4a[1]&&b10>s10+2)conf+=6;
+}
+
+conf=Math.min(98,Math.max(50,Math.round(conf)));
+return{p:pred,c:conf};
+};
+
+const _calcStreak=arr=>{let mw=0,ml=0,cw=0,cl=0;arr.forEach(e=>{if(e.res===_0x4a[2]){cw++;if(cl>ml)ml=cl;cl=0}else if(e.res===_0x4a[3]){cl++;if(cw>mw)mw=cw;cw=0}});if(cw>mw)mw=cw;if(cl>ml)ml=cl;return{mw,ml}};const _u=()=>{const n=new Date(),h=String(n.getHours()).padStart(2,'0'),m=String(n.getMinutes()).padStart(2,'0'),s=String(n.getSeconds()).padStart(2,'0'),e=document.getElementById('rt');if(e)e.innerHTML=`${h}:${m}:<span class="seconds-highlight">${s}</span>`;if(n.getSeconds()===_k.m)_l()};const _s=()=>{_u();clearInterval(_ct);_ct=setInterval(_u,_k.i)};window._r=()=>{const ic=document.getElementById('ri');if(ic){ic.classList.add('spinning');setTimeout(()=>ic.classList.remove('spinning'),500)}_l()};const _l=async()=>{try{const t=new Date().getTime(),_u=_k.u1+_k.u2+_k.u3+_k.u4,_q=`?${_d('7473')}=${t}`,_f=_u+_q,r=await fetch(_f),d=await r.json();let ls=[];const _pk=['data','list'],_sk=['list'];if(d&&d[_pk[0]]&&d[_pk[0]][_pk[1]])ls=d[_pk[0]][_pk[1]].slice(0,10);else if(d&&d[_sk[0]])ls=d[_sk[0]].slice(0,10);else if(Array.isArray(d))ls=d.slice(0,10);const tb=document.getElementById("tb");tb.innerHTML="";if(ls.length===0){tb.innerHTML='<tr><td colspan="5" class="loading">[ NO DATA ]</td></tr>';return}const _f1=['issue','period','issueNo','periodId','issueNumber'],_f2=['result','number','num','openResult'],_f3=['color','colour'],_f4=['gameNo','drawNo','id'];const tp=String(ls[0][_f1[0]]||ls[0][_f1[1]]||ls[0][_f1[2]]||ls[0][_f1[3]]||ls[0][_f1[4]]||''),tn=String(ls[0][_f2[0]]||ls[0][_f2[1]]||ls[0][_f2[2]]||ls[0][_f2[3]]||''),ts=_x(tn);const sh=ls.map(i=>{const rn=i[_f2[0]]||i[_f2[1]]||i[_f2[2]]||i[_f2[3]]||"?";return _x(rn)});const pd=_a(sh);_c=pd;if(_lp!==tp){if(_p){const im=_p.p===ts,re={per:tp,pred:_p.p,act:ts,res:im?_0x4a[2]:_0x4a[3],num:tn};_h.unshift(re);if(_h.length>50)_h=_h.slice(0,50)}_p={..._c};_lp=tp}const cr=document.getElementById("currPred"),cb=document.getElementById("confBar"),cl=document.getElementById("confLabel");cr.innerHTML=`<span class="prediction-${_c.p.toLowerCase()}">${_c.p}</span>`;cb.style.width=_c.c+'%';if(_c.c>=75)cl.innerHTML='<span class="confidence-high">ULTRA HIGH</span>';else if(_c.c>=65)cl.innerHTML='<span class="confidence-high">HIGH CONFIDENCE</span>';else cl.innerHTML='<span class="confidence-low">MEDIUM</span>';let wc=0,lc=0;_h.forEach(e=>{if(e.res===_0x4a[2])wc++;if(e.res===_0x4a[3])lc++});const st=_calcStreak(_h);ls.forEach((it,ix)=>{const tr=document.createElement("tr"),tdp=document.createElement("td");tdp.className="period-cell";const pv=String(it[_f1[0]]||it[_f1[1]]||it[_f1[2]]||it[_f1[3]]||it[_f1[4]]||it[_f4[0]]||it[_f4[1]]||it[_f4[2]]||'');tdp.textContent=pv||"N/A";const rn=it[_f2[0]]||it[_f2[1]]||it[_f2[2]]||it[_f2[3]]||"?",tdn=document.createElement("td");tdn.className="number-cell";const ns=document.createElement("span"),co=(it[_f3[0]]||it[_f3[1]]||"").toLowerCase();if(co==='red'){ns.style.color='#ff0055';ns.style.textShadow='0 0 10px #ff0055'}else if(co==='green'){ns.style.color='#00ff41';ns.style.textShadow='0 0 10px #00ff41'}else if(co==='violet'||co==='purple'){ns.style.color='#aa00ff';ns.style.textShadow='0 0 10px #aa00ff
